# aoc

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
aoc-manager/: Cargo.toml
aoc-manager/src/: main.rs
aoc-utils/: Cargo.toml
aoc-utils/src/: lib.rs
day_2022_01/: Cargo.toml
day_2022_02/: Cargo.toml
day_2022_03/: Cargo.toml
day_2022_03/src/: main.rs
day_2022_04/: Cargo.toml
day_2022_04/src/: main.rs
day_2022_05/: Cargo.toml
day_2022_05/src/: main.rs
day_2022_06/: Cargo.toml
day_2022_07/: Cargo.toml
day_2022_08/: Cargo.toml
day_2022_09/: Cargo.toml
day_2022_1/: Cargo.toml
day_2022_1/src/: main.rs
day_2022_10/: Cargo.toml
day_2022_11/: Cargo.toml
day_2022_12/: Cargo.toml
day_2022_2/: Cargo.toml
day_2022_3/: Cargo.toml
day_2022_6/: Cargo.toml
day_2022_7/: Cargo.toml
day_2022_8/: Cargo.toml
day_2022_9/: Cargo.toml
day_2023_01/: Cargo.toml
day_2023_02/: Cargo.toml
day_2023_03/: Cargo.toml
day_2023_04/: Cargo.toml
day_2023_05/: Cargo.toml
day_2023_06/: Cargo.toml
day_2023_07/: Cargo.toml
day_2023_08/: Cargo.toml
day_2023_09/: Cargo.toml
day_2023_10/: Cargo.toml
day_2023_11/: Cargo.toml
day_2023_12/: Cargo.toml
day_2023_13/: Cargo.toml
day_2023_14/: Cargo.toml
day_2023_15/: Cargo.toml
day_2023_16/: Cargo.toml
day_2023_17/: Cargo.toml
day_2023_18/: Cargo.toml
day_2024_01/: Cargo.toml
day_2024_02/: Cargo.toml
day_2024_03/: Cargo.toml
day_2024_04/: Cargo.toml
day_2024_05/: Cargo.toml
day_2024_06/: Cargo.toml
day_2024_07/: Cargo.toml
day_2024_08/: Cargo.toml
day_2024_09/: Cargo.toml
day_2024_10/: Cargo.toml
day_2024_11/: Cargo.toml
day_2024_12/: Cargo.toml
day_2024_13/: Cargo.toml
day_2024_14/: Cargo.toml
day_2024_15/: Cargo.toml
day_2024_16/: Cargo.toml
src/: lib.rs  main.rs  runner.rs
template/: Cargo.toml
(+74 files in other folders)
