[package]
edition = "2021"
name = "aoc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.25.0"
itertools = "0.10.5"
thiserror = "1.0.37"
tui = "0.19.0"
