[workspace]
exclude = ["template"]
members = [
  "aoc-manager",
  "aoc-utils",
  "day_2022_01",
  "day_2022_02",
  "day_2022_03",
  "day_2022_04",
  "day_2022_05",
  "day_2022_06",
  "day_2022_07",
  "day_2022_08",
  "day_2022_09",
  "day_2022_10",
  "day_2022_11",
  "day_2022_12",
]
resolver = "2"
