[workspace]
exclude = ["template"]
members = [
  "aoc-manager",
  "aoc-utils",
  "day_2022_01",
  "day_2022_02",
  "day_2022_03",
  "day_2022_04",
  "day_2022_05",
  "day_2022_06",
  "day_2022_07",
  "day_2022_08",
  "day_2022_09",
  "day_2022_10",
  "day_2022_11",
  "day_2022_12",
  "day_2023_01",
  "day_2023_02",
  "day_2023_03",
  "day_2023_04",
  "day_2023_05",
  "day_2023_06",
  "day_2023_07",
  "day_2023_08",
  "day_2023_09",
  "day_2023_10",
  "day_2023_11",
  "day_2023_12",
  "day_2023_13",
  "day_2023_14",
  "day_2023_15",
  "day_2023_16",
  "day_2023_17",
  "day_2023_18",
  "day_2024_01",
  "day_2024_02",
  "day_2024_03",
  "day_2024_04",
  "day_2024_05",
  "day_2024_06",
]
resolver = "2"
